--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGOURI = 'mongodb://localhost:27017/basiccrud'
+mongoURI= "mongodb+srv://Jaguilar920:Saebah5210@cluster0.h2elf.mongodb.net/Jaguilar920"
 SECRET=Shh
