--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-mongoURI= "mongodb+srv://Jaguilar920:Saebah5210@cluster0.h2elf.mongodb.net/Jaguilar920"
+MONGODB_URI= mongodb+srv://Jaguilar:Summer5210@cluster0.lxuxf.mongodb.net/JAguilar?retryWrites=true&w=majority
 SECRET=Shh
