--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGODB_URI= mongodb+srv://Jaguilar:Summer5210@cluster0.lxuxf.mongodb.net/JAguilar?retryWrites=true&w=majority
+MONGODB_URI= mongodb+srv://Jaguilar920:Summer5210@cluster0.lxuxf.mongodb.net/JAguilarPortfolio?retryWrites=true&w=majority
 SECRET=Shh
